--- a/index.html
+++ b/index.html
@@ -80,22 +80,24 @@
 </main>
     <footer>
         <!-- nuestras redes-->
-        <div class="imagefooter">
+        <section class="imagefooter">
+            <div class= "mapafooter">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.2870371780223!2d-58.468921699999996!3d-34.6979395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccea3e2b5ee41%3A0x7c931260b208c5db!2zQXV0w7Nkcm9tbyDDk3NjYXIgeSBKdWFuIEfDoWx2ZXo!5e0!3m2!1ses-419!2sar!4v1743644047811!5m2!1ses-419!2sar" width="100%" height="95vh" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="sponsors">
+            <img src="./images/lojack.png" alt="lojack alarmas logo">
+            <img src="./images/mobil1.png" alt="mobil1 aceites logo">
+            <img src="./images/pirelli.png" alt="pirelli neumaticos logo">
+            <img src="./images/skflogo.png" alt="skf rodamientos logo">
+        </div>
+        <div class="redes">
             <p class="negrita">Nuestras Redes</p>
         <a href="https://facebook.com" target="_blank"><img src="./images/facebook.png" alt="Nuestro Facebook"></a>
         <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank"><img src="./images/whatsapp.png" alt="Nuestro WhatsApp"></a>
         <a href="https://www.youtube.com" target="_blank"><img src="./images/youtube.png" alt="Nuestro YouTube"></a>
         <a href="https://www.instagram.com/" target="_blank"><img src="./images/instagram.png" alt="Nuestro Instagram"></a>
         </div>
-         <div class="mapafooter">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.2870371780223!2d-58.468921699999996!3d-34.6979395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccea3e2b5ee41%3A0x7c931260b208c5db!2zQXV0w7Nkcm9tbyDDk3NjYXIgeSBKdWFuIEfDoWx2ZXo!5e0!3m2!1ses-419!2sar!4v1743644047811!5m2!1ses-419!2sar" width="90%" height="90vh" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-        <div class="sponsors">
-            <img src="./images/lojack.png" alt="lojack alarmas logo" class="veremos"></a>
-            <img src="./images/mobil1.png" alt="lojack alarmas logo" class="veremos"></a>
-            <img src="./images/pirelli.png" alt="lojack alarmas logo" class="veremos"></a>
-            <img src="./images/skflogo.png" alt="lojack alarmas logo" class="veremos"></a>
-        </div>
+    </section>
         <p>Copyright 2025</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
