--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../css/style.css">
-        <title>Contacto</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
+    <title>Contacto</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
@@ -12,6 +13,21 @@
 </head>
 <body>
     <header>
+        <div class="menu-desplegable">
+        <div class="dropdown">
+            <button type="button" class="btn btn-sm btn-danger btn-secondary mb-1 dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+        <span class="sr-only">Usuario</span>
+        </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <a class="dropdown-item" href="#">Mi cuenta</a>
+                  <a class="dropdown-item" href="#">Seguridad</a>
+                  <a class="dropdown-item" href="#">Salir</a>
+                </div>
+        </div>
+        </div>
+        <div>
+        <a href="../index.html" class="logo-container"><img src="../images/logoindex.png" alt="Logo de 1/4 Milla Buenos Aires" class="logo"></a>
+        </div>
         <nav>
                 <ul>
                 <li><a href="../index.html">Inicio</a></li>
@@ -22,7 +38,6 @@
                 <li><a href="entradas.html">Entradas</a></li>
                 </ul>
         </nav>
-        <a href="../index.html"><img src="../images/logoindex.png" alt="Logo página" class="logo"></a>
     </header>
     <section class="paginas-principal">
     <h1>Contacto</h1>
@@ -42,15 +57,27 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.2870371780223!2d-58.468921699999996!3d-34.6979395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccea3e2b5ee41%3A0x7c931260b208c5db!2zQXV0w7Nkcm9tbyDDk3NjYXIgeSBKdWFuIEfDoWx2ZXo!5e0!3m2!1ses-419!2sar!4v1743644047811!5m2!1ses-419!2sar" width="50%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </form>
     <footer>
-        <!-- nuestras redes--> 
-        <p class="negrita">Nuestras Redes</p>
-        <div class="imagefooter">
+        <!-- nuestras redes-->
+        <section class="imagefooter">
+            <div class= "mapafooter">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.2870371780223!2d-58.468921699999996!3d-34.6979395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccea3e2b5ee41%3A0x7c931260b208c5db!2zQXV0w7Nkcm9tbyDDk3NjYXIgeSBKdWFuIEfDoWx2ZXo!5e0!3m2!1ses-419!2sar!4v1743644047811!5m2!1ses-419!2sar" width="100%" height="95vh" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="sponsors">
+            <img src="../images/lojack.png" alt="lojack alarmas logo">
+            <img src="../images/mobil1.png" alt="mobil1 aceites logo">
+            <img src="../images/pirelli.png" alt="pirelli neumaticos logo">
+            <img src="../images/skflogo.png" alt="skf rodamientos logo">
+        </div>
+        <div class="redes">
+            <p class="negrita">Nuestras Redes</p>
         <a href="https://facebook.com" target="_blank"><img src="../images/facebook.png" alt="Nuestro Facebook"></a>
         <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank"><img src="../images/whatsapp.png" alt="Nuestro WhatsApp"></a>
         <a href="https://www.youtube.com" target="_blank"><img src="../images/youtube.png" alt="Nuestro YouTube"></a>
         <a href="https://www.instagram.com/" target="_blank"><img src="../images/instagram.png" alt="Nuestro Instagram"></a>
         </div>
+    </section>
         <p>Copyright 2025</p>
     </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
