--- a/pages/entradas.html
+++ b/pages/entradas.html
@@ -12,32 +12,32 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="nav justify-content-end">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">Active</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                    </li>
-                  </ul>
-              </div>
-            </div>
-          </nav>
-        <a href="../index.html"><img src="../images/logoindex.png" alt="Logo página" class="logo"></a>
+   <header>
+        <div class="menu-desplegable">
+        <div class="dropdown">
+            <button type="button" class="btn btn-sm btn-danger btn-secondary mb-1 dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
+        <span class="sr-only">Usuario</span>
+        </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <a class="dropdown-item" href="#">Mi cuenta</a>
+                  <a class="dropdown-item" href="#">Seguridad</a>
+                  <a class="dropdown-item" href="#">Salir</a>
+                </div>
+        </div>
+        </div>
+        <div>
+        <a href="../index.html" class="logo-container"><img src="../images/logoindex.png" alt="Logo de 1/4 Milla Buenos Aires" class="logo"></a>
+        </div>
+        <nav>
+                <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="campeones.html">Campeones</a></li>
+                <li><a href="inscripcion.html">Inscribite</a></li>
+                <li><a href="reglas.html">Reglas</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="entradas.html">Entradas</a></li>
+                </ul>
+        </nav>
     </header>
     <section class="paginas-principal">
         <h1>Entradas</h1>
@@ -49,14 +49,25 @@
         </p>
     </section>
     <footer>
-        <!-- nuestras redes--> 
-        <p class="negrita">Nuestras Redes</p>
-        <div class="imagefooter">
+        <!-- nuestras redes-->
+        <section class="imagefooter">
+            <div class= "mapafooter">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.2870371780223!2d-58.468921699999996!3d-34.6979395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccea3e2b5ee41%3A0x7c931260b208c5db!2zQXV0w7Nkcm9tbyDDk3NjYXIgeSBKdWFuIEfDoWx2ZXo!5e0!3m2!1ses-419!2sar!4v1743644047811!5m2!1ses-419!2sar" width="100%" height="95vh" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="sponsors">
+            <img src="../images/lojack.png" alt="lojack alarmas logo">
+            <img src="../images/mobil1.png" alt="mobil1 aceites logo">
+            <img src="../images/pirelli.png" alt="pirelli neumaticos logo">
+            <img src="../images/skflogo.png" alt="skf rodamientos logo">
+        </div>
+        <div class="redes">
+            <p class="negrita">Nuestras Redes</p>
         <a href="https://facebook.com" target="_blank"><img src="../images/facebook.png" alt="Nuestro Facebook"></a>
         <a href="https://www.whatsapp.com/?lang=es_LA" target="_blank"><img src="../images/whatsapp.png" alt="Nuestro WhatsApp"></a>
         <a href="https://www.youtube.com" target="_blank"><img src="../images/youtube.png" alt="Nuestro YouTube"></a>
         <a href="https://www.instagram.com/" target="_blank"><img src="../images/instagram.png" alt="Nuestro Instagram"></a>
         </div>
+    </section>
         <p>Copyright 2025</p>
     </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
