se modifico la grilla y se ordeno el codigo

--- a/pages/campeones.html
+++ b/pages/campeones.html
@@ -38,6 +38,7 @@
                 </ul>
         </nav>
     </header>
+<main>
         <section class="paginas-principal">
             <h1>Campeones</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rutrum, nibh a lacinia semper, dolor nulla fringilla dui, vel euismod nulla orci id leo. Aenean placerat nulla mattis tortor porttitor molestie. Sed rutrum auctor ante, bibendum convallis lectus tincidunt id. Integer varius felis placerat vestibulum maximus. Nam non est magna. Pellentesque non pellentesque nunc. Duis sed justo commodo, pulvinar velit sed, placerat tortor. Phasellus ac tempor lectus, sit amet porta nibh. Praesent mollis imperdiet lacus ut condimentum.
@@ -60,6 +61,7 @@
             <td>30</td>
         </tr>
     </table>
+</main>
     <footer>
         <!-- nuestras redes-->
         <section class="imagefooter">
