--- a/pages/inscripcion.html
+++ b/pages/inscripcion.html
@@ -39,6 +39,7 @@
                 </ul>
         </nav>
     </header>
+<main>
     <!-- GRID SIMPLE-->
     <section class="inscripcion">
         <div class="formulario">
@@ -91,6 +92,7 @@
         </div>
     <!-- GRID SIMPLE-->
     </section>
+</main>
     <footer>
         <!-- nuestras redes-->
         <section class="imagefooter">
