--- a/pages/reglas.html
+++ b/pages/reglas.html
@@ -39,6 +39,7 @@
                 </ul>
         </nav>
     </header>
+<main>
     <section class="paginas-principal">
         <h1>Reglas</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rutrum, nibh a lacinia semper, dolor nulla fringilla dui, vel euismod nulla orci id leo. Aenean placerat nulla mattis tortor porttitor molestie. Sed rutrum auctor ante, bibendum convallis lectus tincidunt id. Integer varius felis placerat vestibulum maximus. Nam non est magna. Pellentesque non pellentesque nunc. Duis sed justo commodo, pulvinar velit sed, placerat tortor. Phasellus ac tempor lectus, sit amet porta nibh. Praesent mollis imperdiet lacus ut condimentum.
@@ -48,6 +49,7 @@
             Mauris ut ante sit amet nisi ornare suscipit. Aenean volutpat rutrum quam sed venenatis. Nam vel tortor luctus, venenatis erat sollicitudin, porta libero. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque quis erat nibh. Donec tincidunt elit sed velit consectetur viverra. Fusce non sollicitudin est. Donec sodales scelerisque lectus.
         </p>
     </section>
+</main>
     <footer>
         <!-- nuestras redes-->
         <section class="imagefooter">
