--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--- Propiedades del HTML-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,8 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
+<!--- Body / Contenido de la pagina -->
 <body>
-    <!--- menu principal-->
+    <!--- Encabezado con Ingreso a cuentas / Logo / Nav -->
     <header>
         <div class="menu-desplegable">
         <div class="dropdown">
@@ -30,6 +32,7 @@
         </div>
         <nav>
                 <ul>
+                <li><a href="/index.html">Inicio</a></li>
                 <li><a href="./pages/campeones.html">Campeones</a></li>
                 <li><a href="./pages/inscripcion.html">Inscribite</a></li>
                 <li><a href="./pages/reglas.html">Reglas</a></li>
@@ -39,14 +42,16 @@
         </nav>
     </header>
 <main>
+        <!-- Primer seccion informativa -->
 <section>
     <div class="primer-parrafo">
         <iframe width="100%" height="auto" src="https://www.youtube.com/embed/RutvZuAmMAI?si=o10-f3pvscjyBKtB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <div>
             <h1>1/4 Milla</h1>
             <p>
-            El cuarto de milla es una de las disciplinas más emocionantes y populares en el mundo del automovilismo. Consiste en una carrera de velocidad pura donde los vehículos compiten en una distancia exacta de 402 metros (1/4 de milla). Este tipo de competición pone a prueba la aceleración, potencia y habilidad de los conductores, ya sea en coches de calle, vehículos modificados o autos de competición. La adrenalina, la velocidad y la precisión son los elementos clave que hacen del cuarto de milla un deporte fascinante, tanto para los pilotos como para los fanáticos que disfrutan del rugir de los motores y la intensa competencia. Lorem ipsum dolor sit amet consectetur adipiscing elit vehicula convallis, lectus sodales varius imperdiet orci nec himenaeos justo laoreet, pretium fames iaculis enim posuere inceptos ut a. Ullamcorper feugiat viverra parturient mus velit blandit mauris netus cum habitasse sed, vestibulum mi proin nec tellus montes cubilia litora aenean felis faucibus, sapien nam dui vehicula ultrices malesuada aliquet pellentesque imperdiet erat. Mauris venenatis penatibus vel mi egestas aenean, ridiculus hac aliquet ante rutrum pellentesque porta, fringilla placerat mattis neque fusce.
-            Vel tempus class aliquam vivamus sodales dignissim sagittis rutrum, cras quis maecenas etiam pretium interdum bibendum dictumst potenti, eu vulputate aenean curabitur id dui lacus. Sociis praesent dui torquent cubilia id non iaculis vivamus, et nam aptent metus sociosqu magna risus auctor pellentesque, lacinia mollis aenean ad mauris justo molestie. Neque eget purus porttitor rhoncus dignissim magnis netus et maecenas bibendum nascetur justo blandit eu a tellus nunc quisque tristique, at penatibus erat himenaeos class ligula lectus dui faucibus congue tempor cursus mus dictumst aliquam natoque felis.
+El cuarto de milla es una modalidad de automovilismo que consiste en una carrera de aceleración sobre una distancia fija de 402 metros. Dos vehículos compiten en línea recta, partiendo desde cero, con el objetivo de cruzar la meta en el menor tiempo posible. A simple vista puede parecer una competencia sencilla, pero cada salida es una combinación precisa de potencia, reacción y control.
+Este tipo de pruebas pone a prueba tanto las capacidades del conductor como el rendimiento del vehículo, ya sea un auto de calle, modificado o una máquina de competición construida especialmente para este fin. La clave está en una buena largada, una entrega eficiente de potencia y una ejecución limpia.
+La experiencia del cuarto de milla es única: el sonido de los motores, la tensión previa al semáforo y la explosión de velocidad en pocos segundos generan una adrenalina difícil de igualar. Es un deporte que apasiona, une a la comunidad fierrera y celebra cada mejora en tiempos y performance.
             </p>
             </div>
         </div>
@@ -55,29 +60,29 @@
         <div>
         <h2>La experiencia del cuarto de milla</h2>
         <p>
-        Más allá de la competencia, el cuarto de milla es una experiencia única que reúne a pilotos, preparadores y fanáticos en torno a una misma pasión: la velocidad. Cada evento se convierte en un punto de encuentro donde se respira olor a combustible, se escuchan motores rugiendo al límite, y se comparten conocimientos, anécdotas y desafíos. Desde los primeros ajustes en el taller hasta el momento exacto de largada, cada detalle cuenta. La puesta a punto del auto, la elección de los neumáticos, la reacción del piloto y las condiciones de la pista pueden marcar la diferencia entre ganar o quedarse atrás por milésimas de segundo. Es un deporte de precisión, pero también de corazón, donde la emoción y la técnica conviven en cada pasada. Lorem ipsum dolor sit amet consectetur adipiscing elit vehicula convallis, lectus sodales varius imperdiet orci nec himenaeos justo laoreet, pretium fames iaculis enim posuere inceptos ut a. Ullamcorper feugiat viverra parturient mus velit blandit mauris netus cum habitasse sed, vestibulum mi proin nec tellus montes cubilia litora aenean felis faucibus, sapien nam dui vehicula ultrices malesuada aliquet pellentesque imperdiet erat. Mauris venenatis penatibus vel mi egestas aenean, ridiculus hac aliquet ante rutrum pellentesque porta, fringilla placerat mattis neque fusce.
-        Vel tempus class aliquam vivamus sodales dignissim sagittis rutrum, cras quis maecenas etiam pretium interdum bibendum dictumst potenti, eu vulputate aenean curabitur id dui lacus. Sociis praesent dui torquent cubilia id non iaculis vivamus, et nam aptent metus sociosqu magna risus auctor pellentesque, lacinia mollis aenean ad mauris justo molestie. Neque eget purus porttitor rhoncus dignissim magnis netus et maecenas bibendum nascetur justo blandit eu a tellus nunc quisque tristique, at penatibus erat himenaeos class ligula lectus dui faucibus congue tempor cursus mus dictumst aliquam natoque felis.
+        Más allá de la competencia, el cuarto de milla es una experiencia única que reúne a pilotos, preparadores y fanáticos en torno a una misma pasión: la velocidad. Cada evento se convierte en un punto de encuentro donde se respira olor a combustible, se escuchan motores rugiendo al límite, y se comparten conocimientos, anécdotas y desafíos. Desde los primeros ajustes en el taller hasta el momento exacto de largada, cada detalle cuenta. La puesta a punto del auto, la elección de los neumáticos, la reacción del piloto y las condiciones de la pista pueden marcar la diferencia entre ganar o quedarse atrás por milésimas de segundo. Es un deporte de precisión, pero también de corazón, donde la emoción y la técnica conviven en cada pasada. 
         </p>
         </div>
         <img src="images/origenes-foto.jpg" alt="Origenes drag racing">
     </div>
 </section>
+<!--- GRID -->
 <section class="grillas">
+<h3>Noticias</h3>
 <div class="grid-container1">
     <div class="foto1"><img src="images/grid1.png" alt="corsa-motor"></div>
-    <div class="foto2"><img src="images/grid2.png" alt="interior-auto"></div>
-    <div class="foto3"><img src="images/grid3.png" alt="peugeot-motorv6"></div>
-    <div class="foto4"><img src="images/grid4.png" alt="corsa"></div>
-    <div class="foto5"><img src="images/grid5.png" alt="fiat-uno"></div>
-    <div class="foto6"><img src="images/grid6.png" alt="fiat-punto"></div>
+    <div class="foto2"><img src="images/grid3.png" alt="peugeot-motorv6"></div>
+    <div class="foto3"><img src="images/grid4.png" alt="corsa"></div>
+    <div class="foto4"><img src="images/grid5.png" alt="fiat-uno"></div>
+    <div class="foto5"><img src="images/grid6.png" alt="fiat-punto"></div>
 </div>
 <div class="grid-container2">
-    <div class="hola2">hola2</div>
-    <div class="hola1">hola1</div>
+    <div>hola2</div>
+    <div>hola1</div>
 </div>
 </section>
-
 </main>
+<!--- Pie de pagina con mapa, Sponsors y redes sociales -->
     <footer>
         <!-- nuestras redes-->
         <section class="imagefooter">
