--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -39,6 +39,7 @@
                 </ul>
         </nav>
     </header>
+<main>
     <section class="paginas-principal">
     <h1>Contacto</h1>
     </section>
@@ -56,6 +57,7 @@
 
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.2870371780223!2d-58.468921699999996!3d-34.6979395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccea3e2b5ee41%3A0x7c931260b208c5db!2zQXV0w7Nkcm9tbyDDk3NjYXIgeSBKdWFuIEfDoWx2ZXo!5e0!3m2!1ses-419!2sar!4v1743644047811!5m2!1ses-419!2sar" width="50%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </form>
+</main>
     <footer>
         <!-- nuestras redes-->
         <section class="imagefooter">
