Se agrego contenido a paginas y se acomodo el responsive

--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
         </div>
         <nav>
                 <ul>
-                <li><a href="/index.html">Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li><a href="./pages/campeones.html">Campeones</a></li>
                 <li><a href="./pages/inscripcion.html">Inscribite</a></li>
-                <li><a href="./pages/reglas.html">Reglas</a></li>
-                <li><a href="./pages/contacto.html">Contacto</a></li>
                 <li><a href="./pages/entradas.html">Entradas</a></li>
+                <li><a href="./pages/contacto.html">Contacto</a></li>
                 </ul>
         </nav>
     </header>
@@ -75,10 +74,6 @@ La experiencia del cuarto de milla es única: el sonido de los motores, la tensi
     <div class="foto3"><img src="images/grid4.png" alt="corsa"></div>
     <div class="foto4"><img src="images/grid5.png" alt="fiat-uno"></div>
     <div class="foto5"><img src="images/grid6.png" alt="fiat-punto"></div>
-</div>
-<div class="grid-container2">
-    <div>hola2</div>
-    <div>hola1</div>
 </div>
 </section>
 </main>
