--- a/pages/campeones.html
+++ b/pages/campeones.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Campeones</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Campeones</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
@@ -32,22 +32,42 @@
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="campeones.html">Campeones</a></li>
                 <li><a href="inscripcion.html">Inscribite</a></li>
-                <li><a href="reglas.html">Reglas</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
                 <li><a href="entradas.html">Entradas</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
                 </ul>
         </nav>
     </header>
 <main>
         <section class="paginas-principal">
             <h1>Campeones</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rutrum, nibh a lacinia semper, dolor nulla fringilla dui, vel euismod nulla orci id leo. Aenean placerat nulla mattis tortor porttitor molestie. Sed rutrum auctor ante, bibendum convallis lectus tincidunt id. Integer varius felis placerat vestibulum maximus. Nam non est magna. Pellentesque non pellentesque nunc. Duis sed justo commodo, pulvinar velit sed, placerat tortor. Phasellus ac tempor lectus, sit amet porta nibh. Praesent mollis imperdiet lacus ut condimentum.
+            <p>Los más rápidos, los más precisos, los verdaderos campeones del 1/4 de milla.
 
-                Proin a leo nulla. Mauris auctor est non risus suscipit, vitae pharetra enim congue. Praesent eu eleifend lectus. Proin euismod metus nisi, quis accumsan lectus porttitor non. Sed ut leo et ipsum ornare pretium. Morbi pharetra purus dictum nibh venenatis, vitae vehicula odio euismod. Cras arcu lorem, facilisis sit amet egestas ac, mollis eget nibh. Donec vestibulum elementum est ut tempor. Vestibulum ultrices fermentum justo ut dapibus. Mauris nulla urna, commodo vel orci id, posuere vestibulum orci. Duis est neque, imperdiet at nisi at, egestas vehicula velit. Donec at nibh vitae ante vulputate mollis. Vestibulum eget arcu ut elit ultrices semper id ultricies dui. Praesent quam tortor, hendrerit quis faucibus id, aliquet ut lacus.
-                
-                Mauris ut ante sit amet nisi ornare suscipit. Aenean volutpat rutrum quam sed venenatis. Nam vel tortor luctus, venenatis erat sollicitudin, porta libero. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque quis erat nibh. Donec tincidunt elit sed velit consectetur viverra. Fusce non sollicitudin est. Donec sodales scelerisque lectus.
-            </p>
+En esta sección celebramos a quienes dejaron todo en la pista y se ganaron su lugar en lo más alto. Cada evento consagra a nuevos talentos y leyendas de la velocidad. Acá vas a encontrar los tiempos más bajos, las mejores largadas y los nombres que hacen historia.
         </section>
+        <div class="carrousel">
+<div id="carouselExample" class="carousel slide">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="../images/ganadores1.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="../images/ganadores2.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="../images/ganadores3.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+</div>
+        <div class="tablacampeones">
     <table>
         <tr>
             <th>Nombre</th>
@@ -60,7 +80,18 @@
             <td>Vigo</td>
             <td>30</td>
         </tr>
+                <tr>
+            <td>Juan</td>
+            <td>García</td>
+            <td>27</td>
+        </tr>
+                <tr>
+            <td>Iván</td>
+            <td>Pérez</td>
+            <td>41</td>
+        </tr>
     </table>
+    </div>
 </main>
     <footer>
         <!-- nuestras redes-->
