--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
     <title>Contacto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,17 +32,17 @@
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="campeones.html">Campeones</a></li>
                 <li><a href="inscripcion.html">Inscribite</a></li>
-                <li><a href="reglas.html">Reglas</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
                 <li><a href="entradas.html">Entradas</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
                 </ul>
         </nav>
     </header>
 <main>
-    <section class="paginas-principal">
+    <div class="paginas-principal">
     <h1>Contacto</h1>
-    </section>
-    <form action="/submit" method="post">
+    </div>
+    <section>
+    <form class="formulariopages" action="/submit" method="post">
         <label for="nombre">Nombre:</label>
         <input type="text" name="Nombre" id="nombre">
         
@@ -51,18 +50,22 @@
         <label for= "apellido">Apellido:</label>
         <input type="text" name="apellido" id="apellido"> 
 
+        <label for= "mail">Mail:</label>
+        <input type="text" name="mail" id="mail"> 
+
         <label for="mensaje"> Mensaje</label>
         <textarea name="mensaje" id="mensaje"></textarea>
         <input type="submit">
-
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.2870371780223!2d-58.468921699999996!3d-34.6979395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccea3e2b5ee41%3A0x7c931260b208c5db!2zQXV0w7Nkcm9tbyDDk3NjYXIgeSBKdWFuIEfDoWx2ZXo!5e0!3m2!1ses-419!2sar!4v1743644047811!5m2!1ses-419!2sar" width="50%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </form>
-</main>
+    </section>
+    <div class="mapacontactos">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.2870371780223!2d-58.468921699999996!3d-34.6979395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccea3e2b5ee41%3A0x7c931260b208c5db!2zQXV0w7Nkcm9tbyDDk3NjYXIgeSBKdWFuIEfDoWx2ZXo!5e0!3m2!1ses-419!2sar!4v1743644047811!5m2!1ses-419!2sar" width="50%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    </main>
     <footer>
         <!-- nuestras redes-->
         <section class="imagefooter">
             <div class= "mapafooter">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.2870371780223!2d-58.468921699999996!3d-34.6979395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccea3e2b5ee41%3A0x7c931260b208c5db!2zQXV0w7Nkcm9tbyDDk3NjYXIgeSBKdWFuIEfDoWx2ZXo!5e0!3m2!1ses-419!2sar!4v1743644047811!5m2!1ses-419!2sar" width="100%" height="95vh" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="sponsors">
             <img src="../images/lojack.png" alt="lojack alarmas logo">
