--- a/pages/entradas.html
+++ b/pages/entradas.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../css/style.css">
-        <title>Entradas</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Entradas</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
    <header>
@@ -33,22 +32,82 @@
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="campeones.html">Campeones</a></li>
                 <li><a href="inscripcion.html">Inscribite</a></li>
-                <li><a href="reglas.html">Reglas</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
                 <li><a href="entradas.html">Entradas</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
                 </ul>
         </nav>
     </header>
 <main>
     <section class="paginas-principal">
         <h1>Entradas</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque rutrum, nibh a lacinia semper, dolor nulla fringilla dui, vel euismod nulla orci id leo. Aenean placerat nulla mattis tortor porttitor molestie. Sed rutrum auctor ante, bibendum convallis lectus tincidunt id. Integer varius felis placerat vestibulum maximus. Nam non est magna. Pellentesque non pellentesque nunc. Duis sed justo commodo, pulvinar velit sed, placerat tortor. Phasellus ac tempor lectus, sit amet porta nibh. Praesent mollis imperdiet lacus ut condimentum.
-
-            Proin a leo nulla. Mauris auctor est non risus suscipit, vitae pharetra enim congue. Praesent eu eleifend lectus. Proin euismod metus nisi, quis accumsan lectus porttitor non. Sed ut leo et ipsum ornare pretium. Morbi pharetra purus dictum nibh venenatis, vitae vehicula odio euismod. Cras arcu lorem, facilisis sit amet egestas ac, mollis eget nibh. Donec vestibulum elementum est ut tempor. Vestibulum ultrices fermentum justo ut dapibus. Mauris nulla urna, commodo vel orci id, posuere vestibulum orci. Duis est neque, imperdiet at nisi at, egestas vehicula velit. Donec at nibh vitae ante vulputate mollis. Vestibulum eget arcu ut elit ultrices semper id ultricies dui. Praesent quam tortor, hendrerit quis faucibus id, aliquet ut lacus.
-            
-            Mauris ut ante sit amet nisi ornare suscipit. Aenean volutpat rutrum quam sed venenatis. Nam vel tortor luctus, venenatis erat sollicitudin, porta libero. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque quis erat nibh. Donec tincidunt elit sed velit consectetur viverra. Fusce non sollicitudin est. Donec sodales scelerisque lectus.
-        </p>
     </section>
+    <section class="entradas">
+        <div class="textoentradasform">
+            <p>
+¡Viví la emoción de la velocidad al máximo!
+Ya podés asegurar tu lugar para el próximo evento de 1/4 Milla Buenos Aires, donde los mejores autos y pilotos se enfrentan en una competencia llena de adrenalina. Comprá tu entrada de forma rápida, segura y online.
+ Nos vemos en la pista. ¡No te lo pierdas!
+ </p>
+</div>
+    <div class="entradasformulario">
+<p>¿Cómo comprar?
+Elegí el tipo de entrada.
+Completá tus datos.
+Pagá con tarjeta, transferencia o medios habilitados.
+Recibí tu entrada digital por mail o WhatsApp.
+</p>
+<div class="input-group mb-3">
+  <span class="input-group-text" id="basic-addon1">Nombre y Apellido:</span>
+  <input type="text" class="form-control" aria-label="Username" aria-describedby="basic-addon1">
+</div>
+
+<div class="input-group mb-3">
+  <span class="input-group-text" id="basic-addon1">Email:</span>
+  <input type="text" class="form-control" aria-label="Username" aria-describedby="basic-addon1">
+</div>
+Cantidad:
+<div class="btn-group">
+  <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    1
+  </button>
+  <ul class="dropdown-menu">
+    <li><a class="dropdown-item" href="#">2</a></li>
+    <li><a class="dropdown-item" href="#">3</a></li>
+    <li><a class="dropdown-item" href="#">4</a></li>
+    <li><a class="dropdown-item" href="#">5</a></li>
+  </ul>
+</div>
+<form class="row g-3">
+  <div class="col-12">
+    <label for="inputAddress" class="form-label">Direccion:</label>
+    <input type="text" class="form-control" id="inputAddress">
+  </div>
+  <div class="col-12">
+    <label for="inputAddress2" class="form-label">Telefono:</label>
+    <input type="text" class="form-control" id="inputAddress2">
+  </div>
+    <div class="col-md-4">
+    <label for="inputState" class="form-label">Tarjeta</label>
+    <select id="inputState" class="form-select">
+      <option selected>Visa</option>
+      <option>Mastercard</option>
+    </select>
+  </div>
+  <div class="col-md-6">
+    <label for="inputCity" class="form-label">Numero tarjeta:</label>
+    <input type="text" class="form-control" id="inputCity">
+  </div>
+  <div class="col-md-2">
+    <label class="form-label">Cód.Seguridad</label>
+    <input type="text" class="form-control" id="inputZip">
+  </div>
+  <div class="col-12">
+    <button type="submit" class="btn btn-primary">Comprar</button>
+  </div>
+  </div>
+  </section>
+</form>
+</div>
 </main>
     <footer>
         <!-- nuestras redes-->
