Se ajusto boton header responsive

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <!--- Body / Contenido de la pagina -->
 <body>
-    <!--- Encabezado con Ingreso a cuentas / Logo / Nav -->
+    <!--- Encabezado -->
     <header>
         <div class="menu-desplegable">
         <div class="dropdown">
@@ -77,7 +77,6 @@ La experiencia del cuarto de milla es única: el sonido de los motores, la tensi
 </div>
 </section>
 </main>
-<!--- Pie de pagina con mapa, Sponsors y redes sociales -->
     <footer>
         <!-- nuestras redes-->
         <section class="imagefooter">
