Se pasa de css a sass (scss) creacion partials, variables y extend, proxima mixing. responsive completo

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,11 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
     <header>
-        <div class="menu-desplegable">
         <div class="dropdown">
             <button type="button" class="btn btn-sm btn-danger btn-secondary mb-1 dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
         <span class="sr-only">Usuario</span>
@@ -22,7 +21,6 @@
                   <a class="dropdown-item" href="#">Seguridad</a>
                   <a class="dropdown-item" href="#">Salir</a>
                 </div>
-        </div>
         </div>
         <div>
         <a href="../index.html" class="logo-container"><img src="../images/logoindex.png" alt="Logo de 1/4 Milla Buenos Aires" class="logo"></a>
