--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/estilos.css">
 </head>
 <!--- Body / Contenido de la pagina -->
 <body>
     <!--- Encabezado -->
     <header>
-        <div class="menu-desplegable">
         <div class="dropdown">
             <button type="button" class="btn btn-sm btn-danger btn-secondary mb-1 dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
         <span class="sr-only">Usuario</span>
@@ -26,9 +25,8 @@
                   <a class="dropdown-item" href="#">Salir</a>
                 </div>
         </div>
-        </div>
         <div>
-        <a href="./index.html" class="logo-container"><img src="./images/logoindex.png" alt="Logo de 1/4 Milla Buenos Aires" class="logo"></a>
+        <a href="./index.html"><img src="./images/logoindex.png" alt="Logo de 1/4 Milla Buenos Aires" class="logo"></a>
         </div>
         <nav>
                 <ul>
@@ -66,8 +64,8 @@ La experiencia del cuarto de milla es única: el sonido de los motores, la tensi
     </div>
 </section>
 <!--- GRID -->
-<section class="grillas">
 <h3>Noticias</h3>
+<section class="grillas">
 <div class="grid-container1">
     <div class="foto1"><img src="images/grid1.png" alt="corsa-motor"></div>
     <div class="foto2"><img src="images/grid3.png" alt="peugeot-motorv6"></div>
