--- a/pages/inscripcion.html
+++ b/pages/inscripcion.html
@@ -8,11 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
 <header>
-        <div class="menu-desplegable">
         <div class="dropdown">
             <button type="button" class="btn btn-sm btn-danger btn-secondary mb-1 dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
         <span class="sr-only">Usuario</span>
@@ -22,7 +21,6 @@
                   <a class="dropdown-item" href="#">Seguridad</a>
                   <a class="dropdown-item" href="#">Salir</a>
                 </div>
-        </div>
         </div>
         <div>
         <a href="../index.html" class="logo-container"><img src="../images/logoindex.png" alt="Logo de 1/4 Milla Buenos Aires" class="logo"></a>
@@ -49,7 +47,7 @@
             <label for= "apellido">Apellido:</label>
             <input type="text" name="apellido" id="apellido">
 
-            <label for= "automovilFormulario">Marca y modelo:</label>
+            <label for= "automovil">Marca y modelo:</label>
             <input type="text" name="auto" id="automovil"> 
 
             <label for="clase">Clase:</label>
@@ -63,7 +61,7 @@
             </select>
 
             <label for="mensajeAdicional">Mensaje adicional:</label>
-            <textarea name="mensajeAdicional" id="mensaje">Ingrese su mensaje</textarea>
+            <textarea name="mensajeAdicional" id="mensaje" placeholder="Ingrese su mensaje"></textarea>
             <input type="submit">
             </form>
         </div>
