se corrigen errores de formularios tambien bootstrap campones, y se le agrega animaciones a los sponsors del footer y tambien redes sociales

--- a/pages/campeones.html
+++ b/pages/campeones.html
@@ -46,13 +46,13 @@ En esta sección celebramos a quienes dejaron todo en la pista y se ganaron su l
 <div id="carouselExample" class="carousel slide">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../images/ganadores1.jpg" class="d-block w-100" alt="...">
+      <img src="../images/ganadores1.jpg" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="../images/ganadores2.jpg" class="d-block w-100" alt="...">
+      <img src="../images/ganadores2.jpg" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="../images/ganadores3.jpg" class="d-block w-100" alt="...">
+      <img src="../images/ganadores3.jpg" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -65,31 +65,53 @@ En esta sección celebramos a quienes dejaron todo en la pista y se ganaron su l
   </button>
 </div>
 </div>
-        <div class="tablacampeones">
-    <table>
-        <tr>
-            <th>Nombre</th>
-            <th>Apellido</th>
-            <th>Edad</th>
+    <div class="tablacampeones">
+    <table class="table table-hover table-dark table-sm">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Franco</td>
+      <td>Vigo</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Samuel</td>
+      <td>Rodriguez</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Juan</td>
+      <td>Morales</td>
+      </tr>
 
-        </tr>
-        <tr>
-            <td>Franco</td>
-            <td>Vigo</td>
-            <td>30</td>
-        </tr>
-                <tr>
-            <td>Juan</td>
-            <td>García</td>
-            <td>27</td>
-        </tr>
-                <tr>
-            <td>Iván</td>
-            <td>Pérez</td>
-            <td>41</td>
-        </tr>
-    </table>
-    </div>
+      <tr>
+      <th scope="row">4</th>
+      <td>Gaston</td>
+      <td>Sosa</td>
+      </tr>
+
+      <tr>
+      <th scope="row">5</th>
+      <td>Nicolas</td>
+      <td>Vega </td>
+      </tr>
+
+      <tr>
+      <th scope="row">6</th>
+      <td>Thiago</td>
+      <td>Aguirre</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+    
 </main>
     <footer>
         <!-- nuestras redes-->
