--- a/pages/entradas.html
+++ b/pages/entradas.html
@@ -48,12 +48,16 @@ Ya podés asegurar tu lugar para el próximo evento de 1/4 Milla Buenos Aires, d
  </p>
 </div>
     <div class="entradasformulario">
-<p>¿Cómo comprar?
-Elegí el tipo de entrada.
-Completá tus datos.
-Pagá con tarjeta, transferencia o medios habilitados.
-Recibí tu entrada digital por mail o WhatsApp.
-</p>
+  <div class="textocompra">
+<ul>
+<li>¿Cómo comprar?</li>
+  <li>Elegí el tipo de entrada</li>
+  <li>Completá tus datos.</li>
+  <li>Pagá con tarjeta, transferencia o medios habilitados.</li>
+  <li>Recibí tu entrada digital por mail o WhatsApp.</li>
+</ul>
+</div>
+
 <div class="input-group mb-3">
   <span class="input-group-text" id="basic-addon1">Nombre y Apellido:</span>
   <input type="text" class="form-control" aria-label="Username" aria-describedby="basic-addon1">
@@ -100,7 +104,7 @@ Cantidad:
     <input type="text" class="form-control" id="inputZip">
   </div>
   <div class="col-12">
-    <button type="submit" class="btn btn-primary">Comprar</button>
+    <button type="submit" class="btn btn-danger">Comprar</button>
   </div>
   </div>
   </section>
