Se emprolijo un poco el codigo. tambien se cambio el orden del grid index y se agrego una grid de fechas en entradas con mixin

--- a/pages/entradas.html
+++ b/pages/entradas.html
@@ -46,6 +46,23 @@
 Ya podés asegurar tu lugar para el próximo evento de 1/4 Milla Buenos Aires, donde los mejores autos y pilotos se enfrentan en una competencia llena de adrenalina. Comprá tu entrada de forma rápida, segura y online.
  Nos vemos en la pista. ¡No te lo pierdas!
  </p>
+ <section class="fechas">
+  <h2>Próximas Fechas</h2>
+  <div class="fechasgrid">
+    <div class="evento">
+      <h3>Junio</h3>
+      <p>Autódromo de La Plata</p>
+    </div>
+    <div class="evento">
+      <h3>Julio</h3>
+      <p>Av. 27 - Campana</p>
+    </div>
+    <div class="evento">
+      <h3>Agosto</h3>
+      <p>Circuito Callejero - Escobar</p>
+    </div>
+  </div>
+</section>
 </div>
     <div class="entradasformulario">
   <div class="textocompra">
