se emprolija y sube el archivo final

--- a/pages/campeones.html
+++ b/pages/campeones.html
@@ -70,8 +70,8 @@ En esta sección celebramos a quienes dejaron todo en la pista y se ganaron su l
   <thead>
     <tr>
       <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
+      <th scope="col">Nombre</th>
+      <th scope="col">Apellido</th>
     </tr>
   </thead>
   <tbody>
