carpeta final. seo agregado

--- a/pages/entradas.html
+++ b/pages/entradas.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Seo-->
+    <meta name="description" content="Sitio web sobre carreras de autos legales, en la ciudad de Buenos Aires">
+    <meta name="keywords" content="autos, carreras, picadas, campeonato, cuartomilla, buenos aires, enfierrado, galvez">
     <title>Entradas</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
