--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Seo-->
+    <meta name="description" content="Sitio web sobre carreras de autos legales, en la ciudad de Buenos Aires">
+    <meta name="keywords" content="autos, carreras, picadas, campeonato, cuartomilla, buenos aires, enfierrado, galvez">
     <title>1/4 Milla Buenos Aires</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
